# substreams-example-monorepo

./: Cargo.toml  README.md
core/: Cargo.toml  build.rs  core-v0.1.0.spkg  substreams.yaml
core/src/: lib.rs
core/src/abi/: mod.rs  usdt_contract.rs
shared/: Cargo.toml
shared/proto/acme/v1/usdt/: usdt.proto
shared/src/pb/: acme.v1.usdt.rs
sink1/: Cargo.toml  sink1-v0.1.0.spkg  substreams.yaml
sink1/src/: lib.rs
sink1/src/pb/: mod.rs
